Menu pontok elrendezése

--- a/2020_10_09/index.html
+++ b/2020_10_09/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <nav>
+        <div class="menu">
+            <ul>
+                <li><a href="">Főoldal</a></li>
+                <li><a href="">Számítógép alapjai</a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </div>
+        
     </nav>
     <section></section>
     <aside></aside>
