--- a/2020_10_09/index.html
+++ b/2020_10_09/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title></title>
 </head>
-<body>
+<body onload="Time()">
     <nav>
         <div class="menu">
             <ul>
@@ -17,7 +17,7 @@
                 <li><a href=""></a></li>
             </ul>
         </div>
-        
+        <p id="timeOut" ></p>
     </nav>
     <section></section>
     <aside></aside>
