--- a/2020_10_09/ITBasic.html
+++ b/2020_10_09/ITBasic.html
@@ -9,14 +9,27 @@
 </head>
 <body onload="Time()">
     <nav>
-        <div class="menu">
-            <ul>
-                <li><a href="">Főoldal</a></li>
-                <li><a href="">Számítógép alapjai</a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-            </ul>
-        </div>
+        <div id="rt-top"><div id="rt-top2"><div id="rt-top3">
+            <div class="rt-container">
+              <div class="rt-grid-12 rt-alpha rt-omega">
+     	<div class="alternate">
+                <div class="logo">
+                    <div class="rt-block">
+								<div class="module-content">
+                	
+
+<div class="customlogo">
+	<a href="/" title="Főoldal"><img alt="" src="/images/SilexWT2018_new_logo_final_rgb.png" style="height: 83px; width: 200px;"></a></div>
+					<div class="clear"></div>
+				</div>
+            </div>
+                </div>
+			</div>
+	
+</div>
+              <div class="clear"></div>
+            </div>
+          </div></div></div>
         <p id="timeOut" ></p>
     </nav>
     <section></section>
