--- a/2020_10_09/index.html
+++ b/2020_10_09/index.html
@@ -8,17 +8,28 @@
     <title></title>
 </head>
 <body onload="Time()">
-    <nav>
-        <div class="menu">
-            <ul>
-                <li><a href="">Főoldal</a></li>
-                <li><a href="">Számítógép alapjai</a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">IT</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="ITBasic.html">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index - Copy (2).html">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="index - Copy (3).html">Disabled</a>
+            </li>
+          </ul>
         </div>
-        <p id="timeOut" ></p>
-    </nav>
+      </nav>
     <section></section>
     <aside></aside>
     <footer>
