--- a/2020_10_09/index.html
+++ b/2020_10_09/index.html
@@ -29,6 +29,7 @@
             </li>
           </ul>
         </div>
+        <p class="bg-light" id="timeOut" ></p>
       </nav>
     <section></section>
     <aside></aside>
