Nav menü CSS + Hiba javítás

--- a/2020_10_09/index - Copy (3).html
+++ b/2020_10_09/index - Copy (3).html
@@ -15,7 +15,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -24,8 +24,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="index - Copy (2).html">Pricing</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="index - Copy (3).html">kurva anyád google</a>
+                <li class="nav-item active">
+                    <a class="nav-link " href="index - Copy (3).html">About</a>
                 </li>
             </ul>
         </div>
