--- a/2020_10_09/index.html
+++ b/2020_10_09/index.html
@@ -25,7 +25,7 @@
               <a class="nav-link" href="index - Copy (2).html">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="index - Copy (3).html">kurva anyád google</a>
+              <a class="nav-link " href="index - Copy (3).html">About</a>
             </li>
           </ul>
         </div>
