--- a/2020_10_09/Test.html
+++ b/2020_10_09/Test.html
@@ -10,14 +10,14 @@
 </head>
 <body onload="Time()">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="#">IT</a>
+        <a class="navbar-brand">IT</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Computer_Structure.html">Computer Structure</a>
@@ -29,7 +29,7 @@
               <a class="nav-link " href="index - Copy (3).html">About</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link " href="Test.html">Test</a>
+              <a class="nav-link " href="Test.html">Test <span class="sr-only">(current)</span> </a>
             </li>
           </ul>
         </div>
@@ -39,7 +39,32 @@
 
 <form action="Evaluation.html" method="post" required>
 
-  <p class="question">What does HDD means? :</p>
+  <p class="question">What does HDD means? :</p><br>
+    <input type="radio" id="hdd1" name="hdd">
+    <label for="hdd1">Hard Drive Disk </label><br>
+    <input type="radio" id="hdd2" name="hdd">
+    <label for="hdd2">Hybrid Drive Disk </label><br>
+    <input type="radio" id="hdd3" name="hdd">
+    <label for="hdd3">Hard Disk Drive</label><br>
+    <input type="radio" id="hdd4" name="hdd">
+    <label for="hdd4">High Definiton Disk</label><br><br>
+    <img src="itvirus.jpg">
+
+  <p class="question">What does SSD means? :</p><br>
+    <input type="text" id="ssd1" name="ssd" value="">
+    <br><br>
+
+  <p class="question">Which virus slows your network? :</p><br>
+    <input type="radio" id="virus1" name="virus">
+    <label for="virus1">Trojan</label><br>
+    <input type="radio" id="virus2" name="virus">
+    <label for="virus2">Worm</label><br>
+    <input type="radio" id="virus3" name="virus">
+    <label for="virus3">Hard Disk Drive</label><br>
+    <input type="radio" id="virus4" name="virus">
+    <label for="virus4">High Definiton Disk</label><br><br>
+
+  <p class="question">What does HDD means? :</p><br>
     <input type="radio" id="hdd1" name="hdd">
     <label for="age1">Hard Drive Disk </label><br>
     <input type="radio" id="hdd2" name="hdd">
@@ -47,30 +72,6 @@
     <input type="radio" id="hdd3" name="hdd">
     <label for="age2">Hard Disk Drive</label><br>
     <input type="radio" id="hdd4" name="hdd">
-    <label for="age3">High Definiton Disk</label><br><br>
-
-  <p class="question">What does SSD means? :</p>
-    <input type="text" id="ssd1" name="ssd" value="">
-    <br><br>
-
-  <p class="question">Which virus slows your network? :</p>
-    <input type="radio" id="hdd1" name="hdd" value="10">
-    <label for="age1">Trojan</label><br>
-    <input type="radio" id="hdd2" name="hdd" value="10">
-    <label for="age1">Worm</label><br>
-    <input type="radio" id="hdd3" name="hdd" value="100">
-    <label for="age2">Hard Disk Drive</label><br>
-    <input type="radio" id="hdd4" name="hdd" value="1">
-    <label for="age3">High Definiton Disk</label><br><br>
-
-  <p class="question">What does HDD means? :</p>
-    <input type="radio" id="hdd1" name="hdd" value="10">
-    <label for="age1">Hard Drive Disk </label><br>
-    <input type="radio" id="hdd2" name="hdd" value="10">
-    <label for="age1">Hybrid Drive Disk </label><br>
-    <input type="radio" id="hdd3" name="hdd" value="100">
-    <label for="age2">Hard Disk Drive</label><br>
-    <input type="radio" id="hdd4" name="hdd" value="1">
     <label for="age3">High Definiton Disk</label><br><br>
 
     <input type="submit" value="Submit">
