--- a/2020_10_09/index.html
+++ b/2020_10_09/index.html
@@ -9,7 +9,7 @@
 </head>
 <body onload="Time()">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="#">IT</a>
+        <a class="navbar-brand">IT</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,6 +26,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link " href="index - Copy (3).html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="Test.html">Test</a>
             </li>
           </ul>
         </div>
