Kitöröltem a jó istent is

--- a/2020_10_09/Computer_Structure.html
+++ b/2020_10_09/Computer_Structure.html
@@ -22,10 +22,7 @@
               <a class="nav-link" href="Computer_Structure.html">Computer Structure <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index - Copy (2).html">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="index - Copy (3).html">About</a>
+              <a class="nav-link" href="virus.html">Virus</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="Test.html">Test</a>
