--- a/2020_10_09/ITBasic.html
+++ b/2020_10_09/ITBasic.html
@@ -16,17 +16,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="ITBasic.html">Features</a>
+                    <a class="nav-link" href="ITBasic.html">Features <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index - Copy (2).html">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="index - Copy (3).html">About</a>
-                </li>
+                    <a class="nav-link" href="virus.html">Virus</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="Test.html">Test</a>
+                  </li>
             </ul>
         </div>
         <p class="bg-light" id="timeOut"></p>
