--- a/2020_10_09/Test.html
+++ b/2020_10_09/Test.html
@@ -23,10 +23,7 @@
               <a class="nav-link" href="Computer_Structure.html">Computer Structure</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index - Copy (2).html">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="index - Copy (3).html">About</a>
+              <a class="nav-link" href="virus.html">Virus</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link " href="Test.html">Test <span class="sr-only">(current)</span> </a>
