--- a/2020_10_09/Sources.html
+++ b/2020_10_09/Sources.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="2">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="Test.css">
+    <link rel="stylesheet" href="style.css">
     <title>IT</title>
 </head>
 <body onload="Time()">
@@ -17,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">What is IT? </a>
+              <a class="nav-link" href="index.html">What is IT?</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Computer_Structure.html">Computer Structure</a>
@@ -25,11 +24,11 @@
             <li class="nav-item">
               <a class="nav-link" href="virus.html">Viruses</a>
             </li>
-            <li class="nav-item active">
-              <a class="nav-link " href="Test.html">Test <span class="sr-only">(current)</span> </a>
-            </li>
             <li class="nav-item">
-              <a class="nav-link " href="Sources.html">Sources</a>
+              <a class="nav-link " href="Test.html">Test</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link " href="Sources.html">Sources  <span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </div>
@@ -37,59 +36,27 @@
       </nav>
     <section>
 
-<form action="Evaluation.html" method="post" required>
 
-  <p class="question">What does <a id="HDDpopup">HDD</a> means? :</p><br>
-    <input type="radio" id="hdd1" name="hdd">
-    <label for="hdd1">Hard Drive Disk </label><br>
-    <input type="radio" id="hdd2" name="hdd">
-    <label for="hdd2">Hybrid Drive Disk </label><br>
-    <input type="radio" id="hdd3" name="hdd">
-    <label for="hdd3">Hard Disk Drive</label><br>
-    <input type="radio" id="hdd4" name="hdd">
-    <label for="hdd4">High Definiton Disk</label><br><br>
 
-    <div class="HDDpopup">
+        <div class="Feribá">
+            <img src="https://www.dszcmechwart.hu/images/munkatarsak/delczeg_ferenc.jpg">
+            <p>Délczeg Ferenc</p>
+        </div>
 
-    </div>
 
-  <p class="question">What does <a id="SSDpopup">SSD</a> means? :</p><br>
-    <input type="text" id="ssd1" name="ssd" value="">
-    <br><br>
-
-    <div class="SSDpopup">
-
-    </div>
-
-  <p class="question">Which <a id="viruspopup">virus</a> slows your network? :</p><br>
-    <input type="radio" id="virus1" name="virus">
-    <label for="virus1">Trojan</label><br>
-    <input type="radio" id="virus2" name="virus">
-    <label for="virus2">Worm</label><br>
-    <input type="radio" id="virus3" name="virus">
-    <label for="virus3">Hard Disk Drive</label><br>
-    <input type="radio" id="virus4" name="virus">
-    <label for="virus4">High Definiton Disk</label><br><br>
-
-    <div class="viruspopup">
-      <p>Viruses are bad things for a pc.</p>
-      <img src="itvirus.jpg">
-    </div>
-
-    <input type="submit" value="Submit">
-
-</form>
 
     </section>
+    <aside></aside>
     <footer>
         &copy; 2020
     </footer>
 
     <div class="scripts">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-        <script src="test.js"></script>
+        <script src="script.js"></script>
     </div>
 
 </body>
