--- a/2020_10_09/Sources.html
+++ b/2020_10_09/Sources.html
@@ -37,12 +37,12 @@
     <section>
 
 
-
+      <div class="padding">
         <div class="Feribá">
             <img src="https://www.dszcmechwart.hu/images/munkatarsak/delczeg_ferenc.jpg">
             <p>Délczeg Ferenc</p>
         </div>
-
+      </div>
 
 
     </section>
