Computer_Structure.html táblázat

--- a/2020_10_09/Computer_Structure.html
+++ b/2020_10_09/Computer_Structure.html
@@ -61,7 +61,46 @@
   Output Unit
   
   Output unit consists of devices with the help of which we get the information from computer. This unit is a link between computer and users. Output devices translate the computer’s output into the form understandable by users.
-  
+  <table width="673">
+    <tbody>
+      <tr>
+        <td width="74">
+          <strong>Sr.No.</strong>
+        </td>
+        <td>
+          <strong>Operation</strong>
+        </td>
+        <td>
+          <strong>Description</strong>
+        </td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Take Input</td>
+        <td>The process of entering data and instructions into the computer system</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Store Data</td>
+        <td>Saving data and instructions so that they are available for processing as and when required.</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Processing Data</td>
+        <td>Performing arithmetic, and logical operations on data in order to convert them into useful information.</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>Output Information</td>
+        <td>The process of producing useful information or results for the user, such as a printed report or visual display.</td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td>Control the workflow</td>
+        <td>Directs the manner and sequence in which all of the above operations are performed.</td>
+      </tr>
+    </tbody>
+  </table>
 </p>
 </div>
 
