Computer_Structure.html tartalom kialakitás

--- a/2020_10_09/Computer_Structure.html
+++ b/2020_10_09/Computer_Structure.html
@@ -38,29 +38,23 @@
 
 
 <div class="padding">
-<p>Basic Structure of Computer
-  All types of computers follow a same basic logical structure and perform the following five basic operations for converting raw input data into information useful to their users.
-  
-  Following diagram shows the basic structure of Computer:
-  
-  Basic structure
-  
-  Input Unit
-  
-  This unit contains devices with the help of which we enter data into computer. This unit makes link between user and computer. The input devices translate the information into the form understandable by computer.
-  
-  CPU (Central Processing Unit)
-  
-  CPU is considered as the brain of the computer. CPU performs all types of data processing operations. It stores data, intermediate results and instructions(program). It controls the operation of all parts of computer.
-  
-  CPU itself has following three components
-  
-  ALU(Arithmetic Logic Unit)
-  Memory Unit
-  Control Unit
-  Output Unit
-  
-  Output unit consists of devices with the help of which we get the information from computer. This unit is a link between computer and users. Output devices translate the computer’s output into the form understandable by users.
+  <p><h3>Basic Structure of Computer</h3></p>
+  </p>All types of computers follow a same basic logical structure and perform the following five basic operations for converting raw input data into information useful to their users.</p>
+  </p>Following diagram shows the basic structure of Computer:</p>
+  <img src="xd.png">
+  <p> </p>
+  <p><b><u>Input Unit</u></b></p>
+  <p>This unit contains devices with the help of which we enter data into computer. This unit makes link between user and computer. The input devices translate the information into the form understandable by computer.</p>
+  <p><b><u>CPU (Central Processing Unit)</u></b></p>
+  <p>CPU is considered as the brain of the computer. CPU performs all types of data processing operations. It stores data, intermediate results and instructions(program). It controls the operation of all parts of computer.</p>
+  <p><b><u>CPU itself has following three components</u></b></p>
+  <ul>
+    <li>ALU(Arithmetic Logic Unit)</li>
+    <li>Memory Unit</li>
+    <li>Control Unit</li>
+    <li>Output Unit</li>
+  </ul>
+  <p>Output unit consists of devices with the help of which we get the information from computer. This unit is a link between computer and users. Output devices translate the computer’s output into the form understandable by users.</p>
   <table width="673">
     <tbody>
       <tr>
