--- a/2020_10_09/Computer_Structure.html
+++ b/2020_10_09/Computer_Structure.html
@@ -22,6 +22,9 @@
               <a class="nav-link" href="Computer_Structure.html">Computer Structure <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+              <a class="nav-link " href="Main_Parts.html">Main Parts & Their Uses</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="virus.html">Viruses</a>
             </li>
             <li class="nav-item">
