--- a/2020_10_09/Main_Parts.html
+++ b/2020_10_09/Main_Parts.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
@@ -15,14 +15,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">What is IT? <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">What is IT?</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Computer_Structure.html">Computer Structure</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link " href="Main_Parts.html">Main Parts & Their Uses</a>
+            <li class="nav-item active">
+              <a class="nav-link " href="Main_Parts.html">Main Parts & Their Uses  <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="virus.html">Viruses</a>
