--- a/2020_10_09/Test.html
+++ b/2020_10_09/Test.html
@@ -23,10 +23,13 @@
               <a class="nav-link" href="Computer_Structure.html">Computer Structure</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link " href="Main_Parts.html">Main Parts & Their Uses</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="virus.html">Viruses</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link " href="Test.html">Test <span class="sr-only">(current)</span> </a>
+              <a class="nav-link " href="Test.html">Test <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="Sources.html">Sources</a>
