--- a/2020_10_09/Sources.html
+++ b/2020_10_09/Sources.html
@@ -25,6 +25,9 @@
               <a class="nav-link " href="Main_Parts.html">Main Parts & Their Uses</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link " href="BIOS.html">BIOS</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="virus.html">Viruses</a>
             </li>
             <li class="nav-item">
