--- a/2020_10_09/BIOS.html
+++ b/2020_10_09/BIOS.html
@@ -28,6 +28,9 @@
                 <a class="nav-link " href="BIOS.html">BIOS  <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+                <a class="nav-link " href="OS.html">Operating System</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="virus.html">Viruses</a>
             </li>
             <li class="nav-item">
