--- a/2020_10_09/Main_Parts.html
+++ b/2020_10_09/Main_Parts.html
@@ -28,6 +28,9 @@
                 <a class="nav-link " href="BIOS.html">BIOS</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link " href="OS.html">Operating System</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="virus.html">Viruses</a>
             </li>
             <li class="nav-item">
