--- a/2020_10_09/Test.html
+++ b/2020_10_09/Test.html
@@ -29,6 +29,9 @@
               <a class="nav-link " href="BIOS.html">BIOS</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link " href="OS.html">Operating System</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="virus.html">Viruses</a>
             </li>
             <li class="nav-item active">
