--- a/2020_10_09/Test.html
+++ b/2020_10_09/Test.html
@@ -45,7 +45,7 @@
         <p class="bg-light" id="timeOut" ></p>
       </nav>
     <section>
-
+<div class="padding">
 <form action="Evaluation.html" method="post" required>
 
   <p class="question">What does <a id="HDDpopup">HDD</a> means? :</p><br>
@@ -88,7 +88,7 @@
     <input type="submit" value="Submit">
 
 </form>
-
+</div>
     </section>
     <footer>
         &copy; 2020
