test.html befejezése

--- a/2020_10_09/Test.html
+++ b/2020_10_09/Test.html
@@ -58,7 +58,7 @@
     <label for="hdd4">High Definiton Disk</label><br><br>
 
     <div class="HDDpopup">
-
+		<p>HDD is a storage hardver which can store datas for years.</p>
     </div>
 
   <p class="question">What does <a id="SSDpopup">SSD</a> means? :</p><br>
@@ -66,7 +66,7 @@
     <br><br>
 
     <div class="SSDpopup">
-
+		<p>SSD is an internal storage which is faster than a HDD.</p>
     </div>
 
   <p class="question">Which <a id="viruspopup">virus</a> slows your network? :</p><br>
